--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 	"license": "MIT",
 	"private": false,
 	"dependencies": {
+		"@types/express": "^4.11.0",
 		"@types/heroku-logger": "^0.1.0",
 		"@types/node": "^9.3.0",
 		"@types/socket.io": "^1.4.31",
+		"express": "^4.16.2",
 		"heroku-logger": "^0.3.0",
 		"socket.io": "^2.0.4",
 		"tslint": "^5.9.1",
