--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
 		"@types/heroku-logger": "^0.1.0",
 		"@types/node": "^9.4.0",
 		"@types/socket.io": "^1.4.31",
+		"@types/ua-parser-js": "^0.7.32",
 		"express": "^4.16.2",
 		"heroku-logger": "^0.3.0",
 		"socket.io": "^2.0.4",
 		"tslint": "^5.9.1",
-		"typescript": "^2.7.1"
+		"typescript": "^2.7.1",
+		"ua-parser-js": "^0.7.17"
 	},
 	"devDependencies": {
 		"tsc-watch": "^1.0.16"
